Fix bean conflicts, compilation warnings, and deprecated APIs
Fixed Issues:
1. Bean Definition Conflicts:
   - Excluded AWSConfig from test profile to avoid conflicts
   - Renamed MockAWSConfig bean to mockAwsRegion
   - Created proper TestAWSConfig for test profile

2. Unchecked Conversion Warnings:
   - Fixed objectMapper.readValue() calls with proper TypeFactory
   - Added @SuppressWarnings where type erasure makes it unavoidable
   - Fixed Map and List casting with proper type safety

3. Deprecated API Usage:
   - Replaced deprecated connection.info() with connection.serverCommands().info()
   - Replaced deprecated URL(String) constructor with URI.create().toURL()

Result: Clean compilation with no errors or critical warnings